rewrite games/index.html

--- a/games/index.html
+++ b/games/index.html
@@ -12,11 +12,11 @@
         <li><a href="FunkyBlocks/FunkyBlocks.html">FunkyBlocks</a></li>
     </ul>
     <ul>
-        <li><a href="Physics/demo.html">demo</a></li>
-        <li><a href="Physics/pachinko.html">pachinko</a></li>
-        <li><a href="Physics/Peg.html">Peg</a></li>
-        <li><a href="Physics/Billiard/Billiard.html">Billiard</a></li>
-        <li><a href="Physics/VegetableMarch/VegetableMarch.html">VegetableMarch</a></li>
+        <li><a href="physics/demo.html">demo</a></li>
+        <li><a href="physics/pachinko.html">pachinko</a></li>
+        <li><a href="physics/Peg.html">Peg</a></li>
+        <li><a href="physics/Billiard/Billiard.html">Billiard</a></li>
+        <li><a href="physics/VegetableMarch/VegetableMarch.html">VegetableMarch</a></li>
     </ul>
 </body>
 </html>
